finish add cascade

--- a/cfgs/detnet59.yml
+++ b/cfgs/detnet59.yml
@@ -11,7 +11,7 @@ TRAIN:
   WEIGHT_DECAY: 0.0001
   DOUBLE_BIAS: False
   LEARNING_RATE: 0.001
-  ASPECT_CROPPING: True
+  ASPECT_CROPPING: False
 TEST:
   HAS_RPN: True
 POOLING_SIZE: 14
